  full delayable sources somewhat smarter and permits, assuming sufficient
  timouts, to persist message up to the max queue capacity. Also some nits
  in debug instrumentation have been fixed.
- bugfix/omudpspoof: problems, including abort, happend when run on
  multiple threads. Root cause is that libnet is not thread-safe. 
  omudpspoof now guards libnet calls with their own mutex.
- bugfix/tcpflood: sending small test files did not work correctly
---------------------------------------------------------------------------
Version 5.8.11  [V5-stable] 2012-05-03
- bugfix: ommysql did not properly init/exit the mysql runtime library
  this could lead to segfaults. Triggering condition: multiple action
  instances using ommysql.  Thanks to Tomas Heinrich for reporting this
  problem and providing an initial patch (which my solution is based on,
  I need to add more code to clean the mess up).
- bugfix: rsyslog did not terminate when delayable inputs were blocked
  due to unvailable sources. Fixes:
  http://bugzilla.adiscon.com/show_bug.cgi?id=299
  Thanks to Marcin M for bringing up this problem and Andre Lorbach
  for helping to reproduce and fix it.
- bugfix: active input in "light delay state" could block rsyslog
  termination, at least for prolonged period of time
- bugfix: imptcp input name could not be set
  config directive was accepted, but had no effect
- bugfix: assigned ruleset was lost when using disk queues
  This looked quite hard to diagnose for disk-assisted queues, as the
  pure memory part worked well, but ruleset info was lost for messages
  stored inside the disk queue.
- bugfix: hostname was not requeried on HUP
  Thanks to Per Jessen for reporting this bug and Marius Tomaschewski for
  his help in testing the fix.
- bugfix: inside queue.c, some thread cancel states were not correctly
  reset. While this is a bug, we assume it did have no practical effect
  because the reset as it was done was set to the state the code actually